[package]
name = "server-postflop"
version = "0.2.7"
description = "The most advanced open-source GTO solver"
authors = ["Wataru Inariba"]
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
postflop-solver = { git = "https://github.com/Equim-chan/postflop-solver" }
rayon = "1"
sysinfo = "0.29"
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12"
axum = "0.8"
axum-embed = "0.1"
rust-embed = "8"
mimalloc = "0.1"
tokio = { version = "1", features = ["full"] }

[features]
custom-alloc = ["postflop-solver/custom-alloc"]

[profile.release]
lto = true
codegen-units = 1
debug = 1
overflow-checks = false
